--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ms-shared-api-avtaler",
-  "description": "Stats",
+  "description": "API for agreements",
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
@@ -40,7 +40,6 @@
   "homepage": "https://github.com/vtfk/ms-shared-api-avtaler",
   "devDependencies": {
     "ava": "1.4.1",
-    "axios": "0.18.0",
     "coveralls": "3.0.3",
     "micro-dev": "3.0.0",
     "nyc": "14.0.0",
@@ -48,13 +47,14 @@
     "test-listen": "1.1.0"
   },
   "dependencies": {
+    "axios": "0.18.0",
     "cors": "2.8.5",
     "express-jwt": "5.3.1",
     "finalhandler": "1.1.1",
     "jsonwebtoken": "8.5.1",
     "markdown-it": "8.4.2",
     "micro": "9.3.3",
-    "mongojs": "2.6.0",
+    "mongodb": "3.2.3",
     "router": "1.3.3"
   }
 }
