--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "markdown-it": "8.4.2",
     "micro": "9.3.3",
     "mongodb": "3.2.3",
-    "router": "1.3.3"
+    "nanoid": "2.0.1",
+    "router": "1.3.3",
+    "winston": "2.4.4",
+    "winston-papertrail": "1.0.5"
   }
 }
