--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "coveralls": "nyc ava && nyc report --reporter=lcov && cat coverage/lcov.info | coveralls",
     "standard-fix": "standard --fix",
     "start": "micro",
-    "dev": "micro-dev -H localhost",
+    "dev": "now dev",
     "deploy": "npm test && now --target production",
     "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
@@ -41,10 +41,8 @@
   "devDependencies": {
     "ava": "2.0.0",
     "coveralls": "3.0.4",
-    "micro-dev": "3.0.0",
     "nyc": "14.1.1",
-    "standard": "12.0.1",
-    "test-listen": "1.1.0"
+    "standard": "12.0.1"
   },
   "dependencies": {
     "axios": "0.19.0",
@@ -52,7 +50,6 @@
     "express-jwt": "5.3.1",
     "finalhandler": "1.1.2",
     "jsonwebtoken": "8.5.1",
-    "markdown-it": "8.4.2",
     "micro": "9.3.4",
     "mongodb": "3.2.7",
     "nanoid": "2.0.3",
