Refactors to async/await (patch)

--- a/now.json
+++ b/now.json
@@ -37,6 +37,10 @@
       "dest": "/README.html"
     },
     { 
+      "src": "/agreements",
+      "dest": "/index.js"
+    },
+    { 
       "src": "/agreements/(.*)",
       "dest": "/index.js"
     }
