--- a/now.json
+++ b/now.json
@@ -11,8 +11,8 @@
     "MONGODB_CONNECTION": "@db-tfkcosmostest-connection",
     "MONGODB_COLLECTION": "avtaler",
     "MONGODB_NAME": "felles",
-    "SVARUT_SERVICE_URL": "url-for-your-svarut-service",
-    "SVARUT_SERVICE_SECRET": "jwt-secret-for-your-svarut-service",
+    "SVARUT_SERVICE_URL": "@svarut-service-url",
+    "SVARUT_SERVICE_SECRET": "@svarut-service-secret",
     "PAPERTRAIL_HOST": "@tfk-papertrail-host",
     "PAPERTRAIL_PORT": "@tfk-papertrail-port",
     "PAPERTRAIL_HOSTNAME": "elevpc"
