--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
   },
   "dependencies": {
     "axios": "0.19.0",
+    "birthdate-from-id": "2.0.0",
     "cors": "2.8.5",
     "express-jwt": "5.3.1",
     "finalhandler": "1.1.2",
+    "get-age": "1.0.1",
     "jsonwebtoken": "8.5.1",
     "micro": "9.3.4",
     "mongodb": "3.2.7",
