Updates config (patch)

--- a/now.json
+++ b/now.json
@@ -8,9 +8,9 @@
   "env": {
     "NODE_ENV": "production",
     "JWT_SECRET": "@tfk-jwt-secret",
-    "MONGODB_CONNECTION": "@db-tfkcosmostest-connection",
+    "MONGODB_CONNECTION": "@db-cosmos-prod-connection",
     "MONGODB_COLLECTION": "avtaler",
-    "MONGODB_NAME": "felles",
+    "MONGODB_NAME": "minelev",
     "SVARUT_SERVICE_URL": "@svarut-service-url",
     "SVARUT_SERVICE_SECRET": "@svarut-service-secret",
     "PAPERTRAIL_HOST": "@tfk-papertrail-host",
