--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "standard-fix": "standard --fix",
     "start": "micro",
     "dev": "now dev",
-    "deploy": "npm test && now --target production",
+    "deploy": "npm test && now --prod",
     "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "keywords": [
